--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<div class="d-flex flex-column align-items-center min-vh-100 pt-4 pb-5", style="backgroud-color: #f7f5e8;">
+<div class="d-flex flex-column align-items-center min-vh-100 pt-4 pb-5">
 
   <turbo-frame id="user_profile_<%= @user.id %>" class="w-100">
     <div class="container d-flex flex-column align-items-center" style="max-width: 1000px;">
 
-      <div class="rounded-circle mt-4 pt-3" style="width: 120px; height: 120px;">
+      <div class="rounded-circle mt-4 pt-3 " style="width: 120px; height: 120px;">
         <img src="<%= @user.user_image_url %>" alt="<%= @user.username %>'s avatar" class="img-fluid" />
       </div>
 
@@ -11,7 +11,7 @@
         <h1 class="fw-bold fs-3 mb-0 ps-1"><%= @user.username %></h1>
         <% if current_user == @user %>
           <%= link_to edit_user_path(@user), data: { turbo_frame: "user_profile_#{@user.id}" }, class: "btn btn-link p-0 ms-2", title: "Edit Profile" do %>
-            <i class="fa-solid fa-user-pen fs-5", style="color: #999999"></i>
+            <i class="fa-solid fa-user-pen fs-5" style="color: #999999"></i>
           <% end %>
         <% end %>
       </div>
@@ -39,7 +39,7 @@
             <%= button_to 'Add Friend', friendships_path(friend_id: @user.id), method: :post, class: "btn btn-outline-primary btn-sm" %>
           <% end %>
         <% else %>
-          <button class="btn btn-secondary btn-sm mt-2 rounded-pill archivo " style="font-weight: 600;" data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
+          <button class="btn btn-secondary btn-sm mt-2 rounded-pill archivo" style="font-weight: 600;" data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
             View Friend Requests
           </button>
 
@@ -76,17 +76,16 @@
 
     </div>
 
-
-    <div class="container-fluid mt-5 pt-4 pb-5 mb-5"">
+    <div class="container-fluid mt-5 pt-4 pb-5 mb-5">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
         <% @trips.each do |trip| %>
           <div class="col">
-            <div class="shadow rounded overflow-hidden h-100">
-              <%= link_to trip_path(trip), data: { turbo: false }, class: "text-decoration-none text-dark d-flex flex-column h-100" do %>
+            <div class="shadow-lg rounded overflow-hidden h-100 d-flex flex-column">
+              <%= link_to trip_path(trip), data: { turbo: false }, class: "text-decoration-none text-dark flex-grow-1 d-flex flex-column" do %>
                 <% image_url = trip.activities.first&.image_url %>
                 <div class="w-100" style="height: 185px; overflow: hidden; margin-top: -25px;">
                   <% if image_url.present? %>
-                    <img src="<%= image_url %>" alt="<%= trip.location %> image" class="w-100 h-100" style="object-fit: cover;" />
+                    <img src="<%= image_url %>" alt="<%= trip.location %> image" class="w-100 h-100" style="object-fit: cover;"  />
                   <% else %>
                     <div class="w-100 h-100 bg-secondary d-flex align-items-center justify-content-center text-white">
                       No image
@@ -95,18 +94,28 @@
                 </div>
 
                 <div class="d-flex flex-column align-items-center justify-content-end px-3 mt-3 mb-3 flex-grow-1">
-                  <% if trip.end_date < Date.today %>
-                    <i class="fa-solid fa-circle-check text-success mb-2 fs-3 border border-white rounded-circle p-1"></i>
-                  <% end %>
+                    <% if trip.end_date < Date.today %>
+                      <i class="fa-solid fa-circle-check text-success mb-2 fs-3 rounded-circle p-1"></i>
+                    <% else %>
+                      <span class="badge bg-warning mb-3 p-1">Upcoming</span>
+                    <% end %>
                   <h5 class="card-title text-center mb-1 fs-5">
-                    <strong><%= trip.location %></strong>
+                    <strong ><%= trip.location %></strong>
                   </h5>
                   <p class="card-text text-muted fs-6 mb-0">
                     <%= trip.start_date.strftime("%m/%d/%Y") %> - <%= trip.end_date.strftime("%m/%d/%Y") %>
                   </p>
                 </div>
-
               <% end %>
+
+              <div class="d-flex align-items-center gap-2 p-3 " style="background-color: #f7f5e8;">
+                <div style="width: 30px; height: 30px;">
+                  <img src="<%= trip.user.user_image_url %>" alt="<%= trip.user.username %>'s avatar" class="rounded-circle w-100 h-100" style="object-fit: cover;" />
+                </div> <br>
+                <small class="text-muted">
+                  <strong style="color:#59683b" class="archivo-black"><%= trip.user.username %></strong> <%= time_ago_in_words(trip.created_at) %> ago
+                </small>
+              </div>
             </div>
           </div>
         <% end %>
